# carla-ros2-bridge

./: LICENSE  NOTICE  README.md  package.xml  setup.cfg  setup.py
carla_ros2_bridge/: carla_utils.py  objects_publisher_node.py  odometry_publisher_node.py  vehicle_info_publisher_node.py  vehicle_status_publisher_node.py
launch/: carla_bridge_launch.py
